codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_wrapped_outputs_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
• 已调用
  └ metrics.get_nearby_metric({"query":"
        very_long_query_that_needs_wrapp
        ing_to_display_properly_in_the_h
        istory","limit":1})
    响应的第一行很长，需要换行显示。
    第二行继续提供更多细节。
