codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__cyber_policy_error_event_narrow_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
ⓘ 多项标记提示可能存在网络安全风险
  如果判断有误，请尝试改写请求。若
  要获得授权安全工作权限，请加入
  Trusted Access for Cyber 计划。
  https://chatgpt.com/cyber
