codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__error_event_oversized_input_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
■ 消息超过最大长度 1048576 个字符（1048577 个）。
