codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_status_only_servers.snap
---
source: tui/src/history_cell.rs
assertion_line: 3384
expression: rendered
---
/mcp

🔌  MCP 工具

  • plugin_docs
    • 状态：已禁用
    • 授权：不支持
    • 命令：docs-server --stdio
    • 工具：lookup
