codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__mcp_tools_output_from_statuses_renders_verbose_inventory.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
/mcp

🔌  MCP 工具

  • plugin_docs
    • 状态：已启用
    • 授权：不支持
    • 命令：docs-server --stdio
    • 工具：lookup
    • 资源：Docs (file:///docs)
    • 资源模板：Doc Template (file:///docs/{id})
